--- a/Poul12/SimpleToDoApp/src/main/resources/static/styles.css
+++ b/Poul12/SimpleToDoApp/src/main/resources/static/styles.css
@@ -1,4 +1,4 @@
-.footer {
+footer {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -6,4 +6,11 @@
     background-color: #f5f5f5;
     padding: 10px;
     text-align: center;
+}
+
+.footer {
+    background-color: #777;
+    padding: 10px;
+    text-align: center;
+    color: white;
 }
