--- a/Poul12/SimpleToDoApp/src/main/resources/static/styles.css
+++ b/Poul12/SimpleToDoApp/src/main/resources/static/styles.css
@@ -1,6 +1,9 @@
 .footer {
-    background-color: #777;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
     padding: 10px;
     text-align: center;
-    color: white;
 }
